--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -9,7 +9,8 @@ import { services } from "../../utils/data.ts";
 type ServicesProps = {
     title: string;
     description: string;
-    icon: string
+    icon: string;
+    link?: string;
 };
 
 
@@ -19,17 +20,17 @@ type ServicesProps = {
     <Container className="space-y-10 md:sapce-y-12">
         <div class="text-center max-w-3xl mx-auto space-y-4">
             <Title>
-                What we offer
+                Our Services & Solutions
             </Title>
             <Paragraph>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                We offer comprehensive tech solutions and expert consultancy tailored to meet your business goals and drive success.
             </Paragraph>
         </div>
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
             {
                     services.map((service: ServicesProps) => {
                     return (
-                            <Service title={service.title} description={service.description} icon={service.icon}>
+                            <Service title={service.title} description={service.description} icon={service.icon} link={service.link}>
                             </Service>
                             );
                     })
