--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,25 @@
 ---
-import "../styles/global.css"
-import Layout from '../layouts/Layout.astro';
-import Hero from '../components/sections/Hero.astro';
-import Services from '../components/sections/Services.astro';
-import AboutUs from '../components/sections/AboutUs.astro';
-import Features from '../components/sections/Features.astro';
-import CTA from '../components/sections/CTA.astro';
-import Brands from '../components/sections/Brands.astro';
+import Layout from "../layouts/Layout.astro";
+import Hero from "../components/sections/Hero.astro";
+import AboutUs from "../components/sections/AboutUs.astro";
+import Services from "../components/sections/Services.astro";
+import Features from "../components/sections/Features.astro";
+import FAQ from "../components/sections/FAQ.astro";
+import CTA from "../components/sections/CTA.astro";
+import ByNumber from "../components/sections/ByNumber.astro";
 ---
 
-<Layout title="Welcome to AgenceX">
-	<main class="flex flex-col gap-y-20 md:gap-y-32 overflow-hidden">
-		<Hero/>
-		<Brands/>
-		<Services/>
-		<AboutUs/>
-		<Features/>
-		<CTA/>
-	</main>
+<Layout title="Home">
+    <!-- Skip link for accessibility -->
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+    
+    <main id="main-content">
+        <Hero />
+        <ByNumber />
+        <AboutUs />
+        <Services />
+        <Features />
+        <FAQ />
+        <CTA />
+    </main>
 </Layout>
