--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -16,9 +16,9 @@ type ServicesProps = {
 
 ---
 
-<section id="services">
-    <Container className="space-y-10 md:sapce-y-12">
-        <div class="text-center max-w-3xl mx-auto space-y-4">
+<section id="services" class="py-20 md:py-24">
+    <Container className="space-y-16 md:space-y-20">
+        <div class="text-center max-w-3xl mx-auto space-y-6">
             <Title>
                 Our Services & Solutions
             </Title>
@@ -26,7 +26,7 @@ type ServicesProps = {
                 We offer comprehensive tech solutions and expert consultancy tailored to meet your business goals and drive success.
             </Paragraph>
         </div>
-        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
+        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8 lg:gap-10 xl:gap-12">
             {
                     services.map((service: ServicesProps) => {
                     return (
