--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/sections/Hero.astro";
 import AboutUs from "../components/sections/AboutUs.astro";
 import Services from "../components/sections/Services.astro";
+import Portfolio from "../components/sections/Portfolio.astro";
 import Features from "../components/sections/Features.astro";
 import FAQ from "../components/sections/FAQ.astro";
 import CTA from "../components/sections/CTA.astro";
@@ -18,6 +19,7 @@ import ByNumber from "../components/sections/ByNumber.astro";
         <ByNumber />
         <AboutUs />
         <Services />
+        <Portfolio />
         <Features />
         <FAQ />
         <CTA />
